Hero fixes on mobile landscape mode

--- a/source/stylesheets/_reset.scss
+++ b/source/stylesheets/_reset.scss
@@ -25,7 +25,6 @@ $imported-modules: () !default;
 html,
 body {
   height: 100%;
-  background: green;
 }
 
 body {
