--- a/source/stylesheets/components/_hero_animation.scss
+++ b/source/stylesheets/components/_hero_animation.scss
@@ -1,6 +1,6 @@
 .HeroAnimation {
   max-height: 100%;
-  max-width: 800px;
+  max-width: 70%;
 }
 
 .HeroAnimation.flipped {
